Implementing #8, fixing #4 again